--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
       <div class="startstop">
         <button class="startstopbutton">Stop</button>
       </div>
+      <div class="slider">
+        <input type="range" class="range" min="0" max="60" />
+      </div>
     </div>
   </body>
   <script src="script.js"></script>
